<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.t9.assistencia.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_attendance"
        android:name="com.t9.assistencia.ui.dashboard.DashboardFragment"
        android:label="@string/attendance"
        tools:layout="@layout/fragment_attendance" />

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.t9.assistencia.ui.notifications.NotificationsFragment"
        android:label="@string/notes"
        tools:layout="@layout/fragment_notes" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.t9.assistencia.ui.notifications.NotificationsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>